--- a/Content/index.css
+++ b/Content/index.css
@@ -128,7 +128,7 @@ thead, thead th {
   color: #2d2d2d;
   padding: 2%;
   width: 100%;
-  margin: 2% 0;
+  margin: 0;
   overflow: hidden;
   border: 1px solid #ccc; }
 
@@ -153,7 +153,7 @@ thead, thead th {
   nav {
     width: 200px; }
   main.container {
-    margin-top: 50px; }
+    margin-top: 70px; }
   .link-handle {
     margin-bottom: 50px; } }
 
