--- a/Content/index.css
+++ b/Content/index.css
@@ -27,7 +27,8 @@ header {
     color: #FFF;
     padding: 8px 0;
     margin: 0;
-    border-bottom: 0; }
+    border-bottom: 0;
+    font-size: 1.7em; }
 
 code {
   background: #ddd; }
