--- a/Src/coreGrid.scss
+++ b/Src/coreGrid.scss
@@ -3,7 +3,7 @@
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.6.0
+    Core Grid 1.7.0
 */
 
 $container-width: 1100px;
@@ -62,9 +62,9 @@ $cols: 12;
 
 /* #region --- Contain Box wrappers --- */
 $col-width: ($container-width / 12);
+
 @for $i from 1 through $cols {
     .col-#{$i}-#{'contain'} {
-        width:100%;
         max-width: ($col-width * $i);
         @extend .extend-col;
         padding: 0;
@@ -90,11 +90,16 @@ $col-width: ($container-width / 12);
 /* #endregion */
 
 /* #region --- Small Auto Grid 540px and greater --- */
+@for $i from 1 through $cols {
+    .col-#{$i}-#{'sm'} {
+        @extend .extend-col;
+    }
+}
+
 @include respond-min($sm-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'sm'} {
             width: 1 * percentage($i/$cols);
-            @extend .extend-col;
         }
     }
 
@@ -109,11 +114,16 @@ $col-width: ($container-width / 12);
 /* #endregion */
 
 /* #region --- Primary Medium Auto Grid 720px and greater --- */
+@for $i from 1 through $cols {
+    .col-#{$i}-#{'md'}, .col-#{$i} {
+        @extend .extend-col;
+    }
+}
+
 @include respond-min($md-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'md'}, .col-#{$i} {
             width: 1 * percentage($i/$cols);
-            @extend .extend-col;
         }
     }
 
@@ -128,11 +138,16 @@ $col-width: ($container-width / 12);
 /* #endregion */
 
 /* #region --- Large Auto Grid 960px and greater --- */
+@for $i from 1 through $cols {
+    .col-#{$i}-#{'lg'} {
+        @extend .extend-col;
+    }
+}
+
 @include respond-min($lg-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'lg'} {
             width: 1 * percentage($i/$cols);
-            @extend .extend-col;
         }
     }
 
